[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scripts/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://Scripts/EnemyBase.gd" type="Script" id=2]
[ext_resource path="res://Scripts/HPbar.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_18.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_19.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_34.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_10.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_33.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_22.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_23.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_20.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_28.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_7.png" type="Texture" id=14]
[ext_resource path="res://Images/BackgroundBigger.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_5.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_6.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_8.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_3.png" type="Texture" id=19]
[ext_resource path="res://TileMap/mp_cs_tilemap_all.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_2.png" type="Texture" id=21]
[ext_resource path="res://Scenes/MainCaracter.tscn" type="PackedScene" id=22]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_29.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_30.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_26.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_27.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_31.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_32.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_24.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_25.png" type="Texture" id=30]
[ext_resource path="res://Scenes/EnemyShooter.tscn" type="PackedScene" id=31]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=10]
resource_local_to_scene = true
0/name = "mp_cs_tilemap_all.png 0"
0/texture = ExtResource( 20 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "mp_cs_tilemap_all.png 1"
1/texture = ExtResource( 20 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "mp_cs_tilemap_all.png 2"
2/texture = ExtResource( 20 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 32, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "mp_cs_tilemap_all.png 3"
3/texture = ExtResource( 20 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 80, 32, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mp_cs_tilemap_all.png 4"
4/texture = ExtResource( 20 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 176, 112, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "mp_cs_tilemap_all.png 5"
5/texture = ExtResource( 20 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 112, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "mp_cs_tilemap_all.png 6"
6/texture = ExtResource( 20 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 176, 128, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "mp_cs_tilemap_all.png 7"
7/texture = ExtResource( 20 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 128, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "mp_cs_tilemap_all.png 8"
8/texture = ExtResource( 20 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 208, 128, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 9 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "mp_cs_tilemap_all.png 9"
9/texture = ExtResource( 20 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 80, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "mp_cs_tilemap_all.png 10"
10/texture = ExtResource( 20 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 224, 128, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 11 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "mp_cs_tilemap_all.png 11"
11/texture = ExtResource( 20 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 224, 640, 32, 48 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "mp_cs_tilemap_all.png 12"
12/texture = ExtResource( 20 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 16, 176, 48, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "mp_cs_tilemap_all.png 13"
13/texture = ExtResource( 20 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 416, 64, 16, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "mp_cs_tilemap_all.png 14"
14/texture = ExtResource( 20 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 480, 64, 16, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "mp_cs_tilemap_all.png 15"
15/texture = ExtResource( 20 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 416, 32, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "mp_cs_tilemap_all.png 16"
16/texture = ExtResource( 20 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 432, 32, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "mp_cs_tilemap_all.png 17"
17/texture = ExtResource( 20 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 480, 32, 16, 16 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "mp_cs_tilemap_all.png 18"
18/texture = ExtResource( 20 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 448, 48, 16, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0

[sub_resource type="StreamTexture" id=12]

[sub_resource type="StreamTexture" id=13]

[sub_resource type="StreamTexture" id=14]

[sub_resource type="StyleBoxLine" id=15]
color = Color( 1, 0, 0, 1 )
thickness = 8

[sub_resource type="StyleBoxLine" id=16]
color = Color( 0.129412, 1, 0.00392157, 1 )
thickness = 8

[sub_resource type="StyleBoxLine" id=17]
color = Color( 0.180392, 0.960784, 0.0196078, 1 )
thickness = 8

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 13 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "Justu",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 12 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 12.0171
height = 34.0

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 7.5, 17.25 )

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -3, 544 )
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262211, 15, 0, 262212, 16, 0, 262213, 16, 0, 262214, 17, 0, 327744, 12, 0, 327747, 13, 0, 327748, 18, 0, 327749, 18, 0, 327750, 14, 0, 327751, 12, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 2, 0, 393232, 3, 0, 393284, 11, 0, 458768, 9, 0, 458769, 3, 0, 458819, 13, 0, 458822, 14, 0, 524305, 9, 0, 524306, 4, 0, 524307, 5, 0, 524326, 4, 0, 524327, 8, 0, 524328, 8, 0, 524329, 8, 0, 524330, 8, 0, 524331, 8, 0, 524332, 8, 0, 524333, 8, 0, 524334, 8, 0, 524335, 5, 0, 589842, 6, 0, 589843, 7, 0, 589847, 10, 0, 589848, 10, 0, 589849, 10, 0, 589850, 10, 0, 589851, 10, 0, 589852, 10, 0, 589853, 10, 0, 589854, 10, 0, 589855, 10, 0, 589856, 10, 0, 589857, 8, 0, 589858, 8, 0, 589859, 6, 0, 589862, 6, 0, 589871, 7, 0, 589872, 8, 0, 589873, 8, 0, 589874, 8, 0, 589875, 8, 0, 589876, 8, 0, 589877, 8, 0, 589878, 8, 0, 589879, 8, 0, 589880, 8, 0, 589881, 8, 0, 589882, 8, 0, 589883, 8, 0, 589884, 8, 0, 589885, 8, 0, 589886, 10, 0, 589887, 10, 0, 589888, 10, 0, 589889, 10, 0, 589890, 10, 0, 589891, 10, 0, 589892, 10, 0, 589893, 10, 0, 589894, 10, 0, 589895, 10, 0, 589896, 10, 0, 589897, 10, 0, 589898, 10, 0, 589899, 10, 0, 589900, 10, 0, 589901, 10, 0, 589902, 10, 0, 589903, 10, 0, 589904, 10, 0, 589905, 10, 0, 589906, 10, 0, 589907, 10, 0, 589908, 10, 0, 589909, 10, 0, 589910, 10, 0, 655379, 6, 0, 655383, 6, 0, 655395, 6, 0, 655398, 6, 0, 720915, 6, 0, 720919, 6, 0, 720931, 6, 0, 720934, 6, 0, 786451, 6, 0, 786455, 6, 0, 786467, 6, 0, 786470, 6, 0, 851987, 6, 0, 851991, 6, 0, 852003, 8, 0, 852004, 8, 0, 852005, 8, 0, 852006, 8, 0, 917523, 6, 0, 917527, 6, 0, 983059, 6, 0, 983060, 8, 0, 983061, 8, 0, 983062, 8, 0, 983063, 6, 0 )

[node name="MainCaracter" parent="." instance=ExtResource( 22 )]
position = Vector2( 15, 615 )
scale = Vector2( 0.213823, 0.213823 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control"]
margin_left = 20.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 46.0
custom_icons/grabber_disabled = SubResource( 12 )
custom_icons/grabber_highlight = SubResource( 13 )
custom_icons/grabber = SubResource( 14 )
custom_styles/slider = SubResource( 15 )
custom_styles/grabber_area_highlight = SubResource( 16 )
custom_styles/grabber_area = SubResource( 17 )
max_value = 10.0
value = 10.0
editable = false
scrollable = false
script = ExtResource( 3 )

[node name="Enemy_1" type="KinematicBody2D" parent="."]
position = Vector2( 847, 668 )
scale = Vector2( 0.839425, 0.839425 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy_1"]
position = Vector2( -0.00012207, 0 )
scale = Vector2( 0.918036, 0.918036 )
frames = SubResource( 18 )
animation = "Justu"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_1"]
position = Vector2( 1.19141, 1.19128 )
shape = SubResource( 19 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 1, 0.25 )
scroll_limit_begin = Vector2( 0, -400 )
scroll_limit_end = Vector2( 0, 400 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -350 )
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 800, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 15 )
centered = false

[node name="EndLevel" type="Area2D" parent="."]
position = Vector2( 1101, 669 )
script = ExtResource( 1 )
level = "3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevel"]
position = Vector2( 1, 0 )
shape = SubResource( 20 )

[node name="EnemyShooter" parent="." instance=ExtResource( 31 )]
position = Vector2( 446, 657 )

[connection signal="hp_slider" from="MainCaracter" to="CanvasLayer/Control/HSlider" method="_on_MainCaracter_hp_slider"]
[connection signal="body_entered" from="EndLevel" to="EndLevel" method="_on_EndLevel_body_entered"]
[connection signal="body_exited" from="EndLevel" to="EndLevel" method="_on_EndLevel_body_exited"]
